fix: 불필요한 테스트 이미지 삭제